@@ -84,6 +84,9 @@ Branch YARN-2928: Timeline Server Next Generation: Phase 1
 
   IMPROVEMENTS
 
+    YARN-3276. Code cleanup for timeline service API records. (Junping Du via
+    zjshen)
+
   OPTIMIZATIONS
 
   BUG FIXES
